(BLEEDING) Second Phase of RTL Fixes

--- a/interface/themes/patientportal-register.scss
+++ b/interface/themes/patientportal-register.scss
@@ -41,17 +41,17 @@ body {
 }
 
 .stepwiz-row {
-  display: table-row;
-
-  &::before {
-    background-color: #ccc;
-    bottom: 0;
-    content: " ";
-    height: 1px;
-    position: absolute;
-    top: 14px;
-    width: 100%;
-  }
+    display: table-row;
+	&:before {
+	    top: 14px;
+	    bottom: 0;
+	    position: absolute;
+	    content: " ";
+	    width: 100%;
+	    height: 1px;
+	    background-color: #ccc;
+	    z-order: 0;
+	}
 }
 
 .stepwiz {
@@ -62,18 +62,16 @@ body {
 }
 
 .stepwiz-step {
-  display: table-cell;
-  position: relative;
-  text-align: center;
-
-  p {
-    margin-top: 10px;
-  }
-
-  button[disabled] {
-    filter: alpha(opacity=100) !important;
-    opacity: 1 !important;
-  }
+    display: table-cell;
+    text-align: center;
+    position: relative;
+	p {
+	    margin-top: 10px;
+	}
+	button[disabled] {
+	    opacity: 1 !important;
+	    filter: alpha(opacity=100) !important;
+	}
 }
 
 .btn-circle {
