--- a/interface/themes/rtl.scss
+++ b/interface/themes/rtl.scss
@@ -14,11 +14,6 @@
     text-align: right !important;
   }
 
-  /*Bootstrap 3 classes modified for rtl*/
-  .text-center {
-    text-align: center !important;
-  }
-
   #navigation-slide,
   #navigation-slide * {
     margin-right: 0;
@@ -107,12 +102,12 @@
   }
 
   #dateNav > a:nth-child(2) {
-    background-image: url('../../public/images/rightbtn.gif');
+    background-image: url(../../public/images/rightbtn.gif);
     margin-right: 10px;
   }
 
   #dateNav > a:nth-child(3) {
-    background-image: url('../../public/images/leftbtn.gif');
+    background-image: url(../../public/images/leftbtn.gif);
   }
 
   /* /main/messages/messages.php */
